# FireEmblem

./: CMakeLists.txt  LICENSE  README.md
.zed/: debug.json
assets/scripts/: terrain_tiles.lua
include/: context.hpp  image.hpp  inspector.hpp  log.hpp  path.hpp  render.hpp  renderer.hpp  sdl_call.hpp  terrain.hpp  tilemap.hpp  window.hpp
src/: context.cpp  image.cpp  inspector.cpp  log.cpp  main.cpp  math.cpp  render.cpp  renderer.cpp  terrain.cpp  tilemap.cpp  window.cpp
